--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,9 @@ repositories {
 
 
 dependencies {
-    compile 'org.apache.nifi:nifi-api:0.6.1'
-    compile 'org.apache.nifi:nifi-mock:0.6.1'
+    compile 'org.apache.nifi:nifi-api:1.4.0'
+    compile 'org.apache.nifi:nifi-mock:1.4.0'
+    compile 'org.apache.nifi:nifi-logging-utils:1.4.0'
     testCompile 'junit:junit:4.12'
     runtime 'commons-io:commons-io:2.4'
     runtime 'junit:junit:4.12'
